--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "al",
             "request": "launch",
             "name": "Your own server",
-            "server": "http://BCLatestUS",
+            "server": "http://dok-us",
             "serverInstance": "NAV",
             "authentication": "UserPassword",
             "breakOnError": true,
