--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "id": "94ebd044-c9c5-452f-99b8-b9f57b9ef9b4",
   "name": "BC-ML-Framework",
   "publisher": "Dmitry Katson",
-  "version": "1.0.0.0",
+  "version": "2.0.0.0",
   "brief": "",
   "description": "",
   "privacyStatement": "",
@@ -10,10 +10,22 @@
   "help": "",
   "url": "",
   "logo": "",
-  "dependencies": [],
+  "dependencies": [
+    {
+      "appId": "63ca2fa4-4f03-4f2b-a480-172fef340d3f",
+      "publisher": "Microsoft",
+      "name": "System Application",
+      "version": "1.0.0.0"
+    },
+    {
+      "appId": "437dbf0e-84ff-417a-965d-ed2bb9650972",
+      "publisher": "Microsoft",
+      "name": "Base Application",
+      "version": "15.0.0.0"
+    }
+  ],  
   "screenshots": [],
-  "platform": "14.0.0.0",
-  "application": "14.0.0.0",
+  "platform": "15.0.0.0",
   "idRanges": [
     {
       "from": 50100,
@@ -22,5 +34,5 @@
   ],
   "contextSensitiveHelpUrl": "https://BC-ML-Framework.com/help/",
   "showMyCode": true,
-  "runtime": "3.0"
+  "runtime": "4.0"
 }
