--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,9 @@
             "type": "al",
             "request": "launch",
             "name": "Your own server",
-            "server": "http://DirEMEA-Wave2",
+            "server": "http://bc-us",
             "serverInstance": "BC",
+            "tenant": "default",
             "authentication": "UserPassword",
             "breakOnError": true,
             "launchBrowser": true,
