--- a/app.json
+++ b/app.json
@@ -10,22 +10,9 @@
   "help": "",
   "url": "",
   "logo": "",
-  "dependencies": [
-    {
-      "appId": "63ca2fa4-4f03-4f2b-a480-172fef340d3f",
-      "publisher": "Microsoft",
-      "name": "System Application",
-      "version": "1.0.0.0"
-    },
-    {
-      "appId": "437dbf0e-84ff-417a-965d-ed2bb9650972",
-      "publisher": "Microsoft",
-      "name": "Base Application",
-      "version": "15.0.0.0"
-    }
-  ],  
   "screenshots": [],
-  "platform": "15.0.0.0",
+  "platform": "17.0.0.0",
+  "application": "17.0.0.0",
   "idRanges": [
     {
       "from": 50100,
@@ -34,5 +21,5 @@
   ],
   "contextSensitiveHelpUrl": "https://BC-ML-Framework.com/help/",
   "showMyCode": true,
-  "runtime": "4.0"
+  "runtime": "6.0"
 }
