--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,8 +18,9 @@
             "type": "al",
             "request": "launch",
             "name": "Your own server",
-            "server": "http://NTDWorkshop",
+            "server": "http://bc-us",
             "serverInstance": "BC",
+            "tenant": "default",
             "authentication": "UserPassword",
             "breakOnError": true,
             "launchBrowser": true,
